<resources>
    <string name="app_name">Music Station</string>
    <string name="ok">OK</string>
    <string name="name_ringtone">My Name Ringtone</string>
    <string name="dec_ringtone">Create Your Own Name \n custom Ringtone.</string>
    <string name="create_ringtone">Create Ringtone</string>
    <string name="create_ringtone_dec">Free and Easy Create your  \n custom Ringtones.</string>
    <string name="artist_name">Music Station</string>
    <string name="add_postfix">Add Postfix</string>
    <string name="add_prefix">Add Prefix</string>
    <string name="add_voice_str">Add Voice name on click</string>
    <string name="alert_no_button">No, thanks.</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_title_success">Success</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="app_name1">NameRingtone</string>
    <string name="bad_extension_error">Sorry, Audiocutter is not yet able to edit files of type</string>
    <string name="create_msg">Please Wait , Creating Ringtone ...</string>
    <string name="delay">Delay</string>
    <string name="delay110">Delay 110</string>
    <string name="delay5">Decay 0.5</string>
    <string name="delete_tmp_error">Error deleting temporary file</string>
    <string name="end_marker">End marker</string>
    <string name="enter_data">Please Enter the Name or Record Voice !</string>
    <string name="in_gain">In Gain</string>
    <string name="in_gain6">In Gain 0.6</string>
    <string name="loading">Loading...</string>
    <string name="no_extension_error">Sorry, audiocutter can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>
    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="notification_set_success">notification set success</string>
    <string name="operation_failed">operation failed</string>
    <string name="out_gain">Out Gain</string>
    <string name="out_gain6">Out Gain 0.6</string>
    <string name="play">Play</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="progress_dialog_loading">progress</string>
    <string name="progress_dialog_saving">Saving...</string>
    <string name="read_error">Error reading file</string>
    <string name="recoded_txt">Your Voice Recorded</string>
    <string name="record_save">Recording saved successfully.</string>
    <string name="set_default_notification">Saved! Make this your default notification?</string>
    <string name="start_marker">Start marker</string>
    <string name="info_start_record">Tap to Start Recording...</string>
    <string name="stop">Stop</string>
    <string name="time_seconds">seconds</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="detail_create_shortcut">Add to home screen</string>
    <string name="detail_visit_website">@string/action_station_visit_website</string>
    <string name="detail_play">Play</string>
    <string name="detail_pause">Pause</string>
    <string name="detail_stop">Stop</string>
    <string name="detail_share">Share</string>
    <string name="detail_play_in_sangitguru">Play in Music Station</string>
    <string name="action_homepage">Homepage</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_alarm">Alarm</string>
    <string name="action_station_visit_website">Visit Website</string>
    <string name="action_station_copy_stream_url">Copy Stream URL</string>
    <string name="action_station_share">Share</string>
    <string name="action_local">Local</string>
    <string name="action_skip_to_next">Next</string>
    <string name="action_pause">Pause</string>
    <string name="action_skip_to_previous">Previous</string>
    <string name="action_resume">Resume</string>
    <string name="action_stop">Stop</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_history">Delete history</string>
    <string name="action_delete_favorites">Delete favorites</string>
    <string name="action_delete_stream_history">Clear track history</string>
    <string name="action_top_click">Top Click</string>
    <string name="action_toggle_view">Toggle view</string>
    <string name="action_top_vote">Top Vote</string>
    <string name="action_changed_lately">Changed Lately</string>
    <string name="action_currently_playing">Playing</string>
    <string name="action_tags">Tags</string>
    <string name="action_countries">Countries</string>
    <string name="action_languages">Languages</string>
    <string name="action_edit">Edit</string>
    <string name="action_lyrics">Lyrics</string>
    <string name="action_copy_info">Copy Info</string>
    <string name="error_station_load">Could not connect to station</string>
    <string name="error_list_update">Could not connect to radio browser server</string>
    <string name="share_action">Share station link with..</string>
    <string name="nav_item_stations">Stations</string>
    <string name="nav_item_starred">Favorites</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_alarm">Alarm</string>
    <string name="about_version">Version: %1$s</string>
    <string name="detail_star">Add to favorites</string>
    <string name="detail_unstar">Delete from favorites</string>
    <string name="detail_play_in_external_player">@string/action_play_in_external</string>
    <string name="progress_loading">Loading...</string>
    <string name="sleep_timer" formatted="true">Sleep timer: %1$02d:%2$02d</string>
    <string name="sleep_timer_title">Stop playing after the selected minute</string>
    <string name="sleep_timer_apply">Apply</string>
    <string name="sleep_timer_clear">Clear</string>
    <string name="nav_item_add_sleep">Sleep timer</string>
    <string name="nav_item_save_playlist">Export favorites as playlist</string>
    <string name="nav_item_load_playlist">Import favorites from playlist</string>
    <string name="nav_item_save_history_playlist">Export history as playlist</string>
    <string name="confirm_overwrite_file">Overwrite the file?</string>
    <string name="error_empty_field">This field is required</string>
    <string name="error_invalid_file_name">Invalid file name</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_overwrite">Overwrite</string>
    <string name="notify_load_playlist_nok">Could not import from %1$s&#47;%2$s</string>
    <string name="notify_load_playlist_now">Importing from %1$s&#47;%2$s, please wait.</string>
    <string name="notify_load_playlist_ok">Imported %1$d stations from %2$s&#47;%3$s</string>
    <string name="notify_save_playlist_nok">Could not export to %1$s&#47;%2$s</string>
    <string name="notify_save_playlist_now">Exporting to %1$s&#47;%2$s, please wait.</string>
    <string name="notify_save_playlist_ok">Exported to %1$s&#47;%2$s successfully</string>
    <string name="notify_sync_list_deleted_entries">%1$d of %2$d local stations in the list marked non-existent on the server</string>
    <string name="searchpreference_clear_history">Clear history</string>
    <string name="searchpreference_no_results">No results</string>
    <string name="searchpreference_search">Search…</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_theme_selection_title">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="settings_circular_icons">Use circular icons</string>
    <string name="settings_compact_style">Compact mode</string>
    <string name="settings_compact_style_desc_off">Large icon adopted with station details</string>
    <string name="settings_compact_style_desc_on">Small icon adopted without station details</string>
    <string name="settings_bottom_navigation">Bottom navigation</string>
    <string name="settings_interaction">Interaction</string>
    <string name="settings_single_use_tags">Show rarely-used tags</string>
    <string name="settings_single_use_tags_desc_off">Rarely-used tags will not be shown</string>
    <string name="settings_single_use_tags_desc_on">Rarely-used tags will be shown</string>
    <string name="settings_show_broken">Broken stations</string>
    <string name="settings_show_broken_on">Show broken stations in lists</string>
    <string name="settings_show_broken_off">Do not show broken stations in lists</string>
    <string name="settings_startup_behaviour">Start Behavior</string>
    <string name="startup_action_title">Start action</string>
    <string name="startup_action_title_desc">%s</string>
    <string name="startup_show_all_stations">Show all stations</string>
    <string name="startup_show_favorites">Show favorites</string>
    <string name="startup_show_history">Show history</string>
    <string name="startup_show_last_view">Last view</string>
    <string name="settings_load_icons">Show station icons</string>
    <string name="settings_load_icons_on">Icons will be downloaded</string>
    <string name="settings_load_icons_off">Icons will not be downloaded</string>
    <string name="settings_auto_favorite">Auto-favorites</string>
    <string name="settings_auto_favorite_on">Add stations automatically to favorites when playing</string>
    <string name="settings_auto_favorite_off">Do not add stations automatically to favorites when playing</string>
    <string name="settings_icon_click_toggles_favorite">Click-favorites</string>
    <string name="settings_icon_click_toggles_favorite_on">Click station icon to add or remove favorite station</string>
    <string name="settings_icon_click_toggles_favorite_off">Click station icon to start playing</string>
    <string name="settings_click_trend_icon_visible">Click trend icon</string>
    <string name="settings_click_trend_icon_visible_on">Icon will be visible</string>
    <string name="settings_click_trend_icon_visible_off">Icon will be hidden</string>
    <string name="settings_alarm">Alarm</string>
    <string name="settings_alarm_external">Enable external app</string>
    <string name="settings_alarm_external_desc_on">Open the alarm with default external app</string>
    <string name="settings_alarm_external_desc_off">Open the alarm with RadioDroid</string>
    <string name="settings_alarm_audio_player">Audio player</string>
    <string name="settings_alarm_sleep_timer">Sleep timer</string>
    <string name="settings_alarm_sleep_timer_desc">Stop playing after %1$s minutes</string>
    <string name="settings_play">Player</string>
    <string name="settings_auto_play_on_startup">Auto-play</string>
    <string name="settings_auto_play_on_startup_on">Play last station on startup</string>
    <string name="settings_auto_play_on_startup_off">Do not play last station on startup</string>
    <string name="media_route_menu_title">GoogleCast</string>
    <string name="settings_mpd">Music Player Daemon</string>
    <string name="recording">Recording</string>
    <string name="enter_name">Enter Name</string>
    <string name="skip">Skip</string>
    <string name="favourites">Favourites</string>
    <string name="playlist">Playlist</string>
    <string name="are_you_sure">Are You Sure...?</string>
    <string name="do_you_really_went_to_delete_n_these_record">Do you Really Went to Delete \n These Record ?</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="_00_00">00:00</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="create_new_playlist">Create New Playlist</string>
</resources>