<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ring_background"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:weightSum="10">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7">

            <ImageView
                android:id="@+id/ivback"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:src="@drawable/back" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6.6">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:fontFamily="@font/heebo_semibold"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/create_ringtone"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_230sdp"
            android:gravity="center"
            android:id="@+id/my_name_ringtone"
            android:orientation="vertical"
            android:background="@drawable/my_ringtone_selector">
            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_below="@+id/tx"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/ringtone_img"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_ringtone"
                android:fontFamily="@font/heebo_bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/heebo_regular"
                android:text="@string/dec_ringtone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_230sdp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_30sdp"
            android:id="@+id/create_ringtone"
            android:gravity="center"
            android:background="@drawable/create_ringtone_selector">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_below="@+id/tx"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/ringtone_create"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_ringtone"
                android:fontFamily="@font/heebo_bold"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heebo_regular"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:text="@string/create_ringtone_dec" />

        </LinearLayout>




    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="15dp"
            android:id="@+id/adsView"/>

    </RelativeLayout>






</LinearLayout>
